syntax = "proto3";

package member ;


service member {
  rpc updateSessionKeyByUnionId (updateSessionKeyByUnionIdRequest) returns (updateSessionKeyByUnionIdResponse);
  rpc verifyUserNumberWithPwd (verifyUserNumberWithPwdRequest) returns (verifyUserNumberWithPwdResponse);
}

message updateSessionKeyByUnionIdRequest {
  string unionId    = 1;
  string sessionKey = 2;
}

message updateSessionKeyByUnionIdResponse {

}

message verifyUserNumberWithPwdRequest {
  int64 userNumber = 1;
  string password  = 2;
}

message verifyUserNumberWithPwdResponse {
  int32 status = 1;
}